@@ -13,7 +13,6 @@ OTHER CHANGES
 
 All:
 
-- added wxCLOSE_BOX style for dialogs and frames
 - added wxDateSpan::operator==() and !=() (Lukasz Michalski)
 - use true/false throughout the library instead of TRUE/FALSE
 - wxStopWatch::Start() resumes the stop watch if paused, as per the docs
@@ -30,6 +29,8 @@ wxBase:
 
 All GUI ports:
 
+- added alpha channel support to wxImage
+- added wxCLOSE_BOX style for dialogs and frames
 - added wxSplitterWindow handler to XRC
 - added proportion to wxFlexGridSizer::AddGrowableRow/Col (Maxim Babitski)
 - added wxFlexGridSizer::SetFlexibleDirection() (Szczepan Holyszewski)
